# GuidedResearch

./: .clang-format  .gitignore  Makefile  Makefile.data  Makefile.fnl  Makefile.opt  Makefile.syn  README.md  optimization_iterations.pth  pyproject.toml  requirements.txt
conf/: eval.yaml  generate_synthetic.yaml  optimize.yaml  pcg_sampling.yaml  pcg_training.yaml  train.yaml
conf/callbacks/: default.yaml  model_checkpoint.yaml  model_summary.yaml
conf/correspondence/: projective.yaml
conf/data/: debug.yaml  dphm.yaml  dphm_christoph_mouthmove.yaml  dphm_flame.yaml  dphm_points.yaml  flame.yaml  kinect.yaml  kinect_debug.yaml  kinect_optimize.yaml  kinect_train.yaml  linsys.yaml  linsys_pose.yaml  linsys_pose_full.yaml  synthetic.yaml  synthetic_hard.yaml
conf/debug/: advanced_profiler.yaml  pytorch_profiler.yaml  simple_profiler.yaml
conf/framework/: icp.yaml  neural.yaml  neural_kinect.yaml  neural_synthetic.yaml  weighted_icp.yaml
conf/hydra/: default.yaml
conf/local/: default.yaml
conf/logger/: flame_wandb.yaml  tensorboard.yaml  wandb.yaml
conf/loss/: base.yaml  landmark2d.yaml  landmark3d.yaml  point2plane.yaml  point2point.yaml  regularization.yaml  symmetricICP.yaml
conf/model/: dphm_christoph_mouthmove.yaml  dphm_christoph_mouthmove_train.yaml  flame.yaml  flame_points.yaml  pcg.yaml  point2plane.yaml  point2point.yaml
conf/optimizer/: adam.yaml  adam_no_copy.yaml  gauss_newton.yaml  gradient_decent.yaml  levenberg_marquardt.yaml  linesearch_gauss_newton.yaml  linesearch_levenberg_marquardt.yaml  momentum.yaml  static_levenberg_marquardt.yaml  ternary_linesearch.yaml
conf/paths/: default.yaml
conf/regularize/: dummy.yaml  mlp.yaml
conf/residuals/: base.yaml  face2face.yaml  face2face_neural.yaml  face2face_wo_landmarks.yaml  landmark.yaml  landmark2d.yaml  landmark3d.yaml  neural.yaml  neural_face2face.yaml  neural_w_landmarks.yaml  point2plane.yaml  point2point.yaml  regularization.yaml  symmetricICP.yaml
conf/scheduler/: coarse2fine.yaml  coarse_to_fine.yaml  finetune.yaml  optimizer.yaml
conf/tracker/: defaults.yaml  (+4 more)
docs/: index.html
lib/: camera.py
notebooks/: camera.ipynb  datamodule.ipynb  dataset.ipynb  debug.ipynb  eval.ipynb  flame.ipynb  flame_sample.ipynb  jacobian.ipynb  latency.ipynb  mesh.ipynb  optimize.ipynb  pcg.ipynb  pytorch3d.ipynb  train.ipynb  visualize.ipynb  weighting.ipynb
results/: optimization_iterations.pth
scripts/: Makefile  create_video.py  eval.py  eval_ablation.py  generate_synthetic.py  icp_optimize.py  makefile.py  optimize.py  pcg_sampling.py  pcg_training.py  prepare_dataset.py  prepare_evaluation.py  preprocess_dataset.py  train.py  train_pcg.py  training.py
tests/: flame.py  mesh.py  rasterizer.py  triangles.py
(+117 files in other folders)
